--- a/K72/src/index.css
+++ b/K72/src/index.css
@@ -10,3 +10,27 @@
    src: url(../public/Fonts/Lausanne-500.woff2);
 }
 
+@keyframes moveAnimation {
+   from{
+      transform: translateX(0);
+   }
+   to{
+      transform: translateX(-100%);
+   }
+}
+
+.moveX{
+   animation-name: moveAnimation;
+   animation-duration: 8s;
+   animation-iteration-count: infinite;
+   animation-timing-function: linear;
+}
+
+.moveLink{
+   opacity: 0;
+   transition: all ease 0.3s;
+}
+
+.link:hover .moveLink{
+   opacity: 1;
+}
